# p2p-card

./: .gitignore  404.html  Cargo.toml  README.md  index.html  index.xml  main.2a17d6d954a366e7505d6590f9c01fab71c1074d0c04f5ba3de3b697acdeede137ee2e9dab4597b0614dfe1eac708a176cf6000197be9690e4a783553d2f9143.css  manifest.webmanifest  search-index.json  sitemap.xml
.github/workflows/: deploy_signaling.yml  deploy_site.yml  main.yml
angular/: index.html  main-3QPMF4QO.js
bev_app/: Cargo.toml  Makefile.toml
bev_app/public/: index.html
bev_app/src/: arg_parser.rs  main.rs  utils.rs
bev_app/src/components/: players.rs
bev_app/src/network/: mapper.rs  mod.rs
bev_app/src/resource/: mod.rs  server.rs
bev_app/src/system/: player.rs
bevy_app/: Cargo.toml
bevy_app/src/: arg_parser.rs
blog/: index.html  index.xml  sitemap.xml
blog/example-post/: index.html
blog/page/1/: index.html
categories/: index.html  index.xml
categories/page/1/: index.html
contributors/: index.html  index.xml
contributors/page/1/: index.html
docs/: index.html  index.xml  sitemap.xml
docs/guides/: index.html  index.xml  sitemap.xml
docs/guides/example-guide/: index.html
docs/reference/: index.html  index.xml  sitemap.xml
docs/reference/example-reference/: index.html
docs/resources/: index.html
game/: Cargo.toml
game/src/: arg_parser.rs  lib.rs  main.rs  utils.rs
game/src/bev/: mod.rs
game/src/logic/: mod.rs
game/src/logic/cards/: card.rs  color.rs  color_card.rs  mod.rs  types.rs
game/src/logic/cards/impls/: color_change_card.rs  mod.rs  number_card.rs  pick_card.rs  reverse_card.rs  skip_turn_card.rs
game/src/logic/chain/: block.rs  mod.rs
game/src/logic/deck/: draw.rs  encryption.rs  mod.rs
game/src/logic/encryption/: mod.rs  private.rs
game/src/logic/game/: mod.rs
game/src/logic/players/: key_loader.rs  mod.rs
game/src/logic/protocol/: mod.rs
game/src/network/: mod.rs
play/: index.html
protocol/: Cargo.toml  build.rs
protocol/proto/: card.proto  chain.proto  client.proto  msg.proto
protocol/src/: frame.rs  lib.rs
signaling/: Cargo.toml  Dockerfile
signaling/src/: main.rs  state.rs  topology.rs
tags/: index.html  index.xml
tags/page/1/: index.html
tests/wallets/: alice.json  bob.json  john.json  tom.json
website/angular/: .gitignore  angular.json  package-lock.json  package.json
website/angular/src/app/: app.component.html  app.component.ts
website/angular/src/app/p2p-card-game/: p2p-card-game.component.html  p2p-card-game.component.spec.ts  p2p-card-game.component.ts
website/hugo/: hugo_stats.json  package-lock.json  package.json
website/hugo/config/_default/menus/: menus.en.toml
website/hugo/config/production/: hugo.toml
website/hugo/content/: play.md
(+1 files in other folders)
