[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

rand = "*"
rand_chacha = "0.3.1"

num =  { version = "0.4.3", features = ["rand"] }
lazy_static = "*"

ssss = "0.2.1"

aes-gcm = { version = "0.10.3", features = ["aes"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "1"